[Add]Karabiner-Elementsを追加

--- a/dots.conf
+++ b/dots.conf
@@ -6,3 +6,6 @@ config = .config/ghostty/config
 
 [starship]
 starship.toml = .config/starship.toml
+
+[karabiner]
+karabiner.json = .config/karabiner/karabiner.json
