[Fix]相対パスだったものを置き換え

--- a/dots.conf
+++ b/dots.conf
@@ -2,10 +2,10 @@
 .zshrc = ~/.zshrc
 
 [ghostty]
-config = .config/ghostty/config
+config = ~/.config/ghostty/config
 
 [starship]
-starship.toml = .config/starship.toml
+starship.toml = ~/.config/starship.toml
 
 [karabiner]
-karabiner.json = .config/karabiner/karabiner.json
+karabiner.json = ~/.config/karabiner/karabiner.json
