[Add]Sublime Textを追加

--- a/dots.conf
+++ b/dots.conf
@@ -9,3 +9,8 @@ starship.toml = ~/.config/starship.toml
 
 [karabiner]
 karabiner.json = ~/.config/karabiner/karabiner.json
+
+[sublime]
+Preferences.sublime-settings = ~/dotfiles/sublime/Preferences.sublime-settings
+Package Control.sublime-settings = ~/dotfiles/sublime/Package Control.sublime-settings
+Default (OSX).sublime-keymap = ~/dotfiles/sublime/Default (OSX).sublime-keymap
